# manifold

./: .gitignore  .gitlab-ci.yml  .mcp.json  Cargo.toml  Dockerfile  README.md  docker-compose.yml  global.d.ts  tsconfig.json
caddy/: Caddyfile.azure-entra.example  Caddyfile.cloudflare-access  Caddyfile.dev  Caddyfile.showcase.example  Caddyfile.single-origin.example  SHOWCASE.md
cityhall/: Cargo.toml  README.md
cityhall/config/graph/: bylaw.graphql  change_request.graphql  deployment_plan.graphql  gantt_output.graphql  org_node.graphql
cityhall/config/json/: bylaw.schema.json  change_request.schema.json  deployment_plan.schema.json  gantt_output.schema.json  org_node.schema.json
cityhall/src/: bylaw.rs  gantt.rs  groundwork_client.rs  lib.rs  main.rs  plan.rs
cityhall/src/mcp/: custom_capabilities.rs  mod.rs  tools.rs
cityhall/static/: app.js  index.html
cityhall/tests/: cityhall_cert.rs  mcp_harness.rs
cityhall/tests/common/: mod.rs  stub_union.rs
cityhall/tests/features/: bylaw.feature  change_request.feature  cityhall_mcp.feature  deployment_plan.feature  gantt_output.feature  org_node.feature
data/: application.db  fix_meridian_fixture.py  load_fixture.py  meridian_fixture.json  seed_meridian.py
docs/: Naming Convention Standards.html  deployment.md
docs/architecture/: README.md  conceptual-architecture.md  logical-system-architecture-aws.md  logical-system-architecture-azure.md  logical-system-architecture-kubernetes.md
docs/policy/: environments-policy.docx  environments-policy.md
docs/policy/roles/: director.docx  director.md  domain-architect.docx  domain-architect.md  enterprise-architect.docx  enterprise-architect.md  product-owner.docx  product-owner.md  solution-architect.docx  solution-architect.md  stakeholders.docx  stakeholders.md  tech-lead.docx  tech-lead.md
docs/superpowers/plans/: 2026-04-29-cityhall-scaffold.md  2026-04-29-groundwork-v0.2-master.md  2026-04-29-phase-1-model-refactor.md  (+10 more)
groundwork/: Cargo.toml  README.md
groundwork/config/auth/: policy.csv
groundwork/config/graph/: application.graphql  contract.graphql  dependency.graphql  deployable.graphql  exposes.graphql  service.graphql  sla.graphql
groundwork/config/json/: application.schema.json  contract.schema.json  dependency.schema.json  deployable.schema.json  exposes.schema.json  service.schema.json  sla.schema.json
groundwork/data/: application.db
groundwork/src/: lib.rs  main.rs
groundwork/src/mcp/: client.rs  custom_capabilities.rs  graph.rs  mod.rs
groundwork/src/mcp/tools/: catalog.rs  graph.rs  mod.rs
groundwork/static/: app.js  index.html
groundwork/tests/: groundwork_cert.rs  mcp_harness.rs
groundwork/tests/common/: mod.rs
groundwork/tests/features/: application.feature  dependency.feature  deployable.feature  exposes.feature  graph_viz_data.feature  mcp_tools.feature  web_ui.feature
manifold-edge/: Cargo.toml
manifold-edge/src/: access.rs  lib.rs
manifold-edge/tests/: middleware_integration.rs
manifold-ingest/: Cargo.toml
manifold-ingest/config/auth/: policy.csv
manifold-ingest/config/graph/: ingestion.graphql
manifold-ingest/config/json/: ingestion.schema.json
manifold-ingest/src/: lib.rs  main.rs
manifold-integrations/: README.md
manifold-integrations/catalog-from-github/: Cargo.toml
manifold-integrations/catalog-from-gitlab/: Cargo.toml
manifold-integrations/common/: Cargo.toml
manifold-integrations/common/src/: lib.rs
manifold-integrations/union-from-okta/: Cargo.toml
manifold-integrations/yard-from-github/: Cargo.toml
manifold-integrations/yard-from-gitlab/: Cargo.toml
manifold-integrations/yard-from-gitlab/src/: main.rs
manifold-landing/: README.md  index.html
manifold-lobby/: Cargo.toml
manifold-lobby/config/auth/: policy.csv
manifold-lobby/config/graph/: advisory.graphql  comment.graphql  lifecycle_entry.graphql  program.graphql  program_membership.graphql  saved_view.graphql
manifold-lobby/config/json/: advisory.schema.json  comment.schema.json  lifecycle_entry.schema.json  program.schema.json  program_membership.schema.json  saved_view.schema.json
manifold-lobby/src/: engine.rs  lib.rs  main.rs  rules.rs  seed.rs  snapshot.rs  sources.rs  state.rs
manifold-lobby/static/: app.js  index.html
manifold-ui/: Cargo.toml
manifold-ui/src/: lib.rs
manifold-ui/static/: manifold-ui.css  manifold-ui.js
scripts/: reset-data.sh
union/: Cargo.toml  README.md
union/config/graph/: person.graphql  team.graphql  team_member.graphql  work_order.graphql
union/config/json/: person.schema.json  team.schema.json  team_member.schema.json  work_order.schema.json
union/src/: lib.rs  main.rs
union/src/mcp/: custom_capabilities.rs  mod.rs  tools.rs
union/static/: app.js  index.html
union/tests/: mcp_harness.rs  union_cert.rs
union/tests/common/: mod.rs  stub_cityhall.rs  stub_groundwork.rs
union/tests/features/: person.feature  team.feature  team_member.feature  union_mcp.feature  web_ui.feature  work_order.feature
yard/: Cargo.toml  README.md
yard/config/graph/: data_source.graphql  data_sync.graphql  maintenance_window.graphql  mock_source.graphql  sync_run.graphql  test_environment.graphql  test_infrastructure.graphql  test_run.graphql  test_suite.graphql
yard/config/json/: data_source.schema.json  data_sync.schema.json  maintenance_window.schema.json  mock_source.schema.json  sync_run.schema.json  test_environment.schema.json  test_infrastructure.schema.json  test_run.schema.json  test_suite.schema.json
yard/src/: cityhall_client.rs  estimator.rs  groundwork_client.rs  history.rs  lib.rs  main.rs  reset_plan.rs  sync.rs  validators.rs
yard/src/mcp/: custom_capabilities.rs  mod.rs  tools.rs
yard/static/: app.js  index.html
yard/tests/: mcp_harness.rs  yard_cert.rs
yard/tests/common/: mod.rs  stub_cityhall.rs  stub_groundwork.rs  stub_union.rs
yard/tests/features/: data_source.feature  data_sync.feature  estimate.feature  mock_source.feature  test_environment.feature  test_infrastructure.feature  test_run.feature  test_suite.feature  yard_mcp.feature
(+12 files in other folders)
