[workspace]
members = [
    "groundwork",
    "union",
    "cityhall",
    "yard",
    "manifold-edge",
    "manifold-ingest",
    "manifold-lobby",
    "manifold-ui",
    "manifold-integrations/common",
    "manifold-integrations/catalog-from-github",
    "manifold-integrations/catalog-from-gitlab",
    "manifold-integrations/yard-from-github",
    "manifold-integrations/yard-from-gitlab",
    "manifold-integrations/union-from-okta",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
