[package]
name = "groundwork"
version = "0.1.0"
edition = "2021"
description = "Service catalog for the Manifold suite — register deployables, services, and what depends on what"

[lib]
name = "groundwork"
path = "src/lib.rs"

[[bin]]
name = "groundwork"
path = "src/main.rs"

[[bin]]
name = "groundwork-mcp"
path = "src/bin/groundwork-mcp.rs"

[dependencies]
meshql-core      = { path = "../../meshql-rs/meshql-core" }
meshql-graphlette = { path = "../../meshql-rs/meshql-graphlette" }
meshql-restlette = { path = "../../meshql-rs/meshql-restlette" }
meshql-server    = { path = "../../meshql-rs/meshql-server" }
meshql-mcp       = { path = "../../meshql-rs/meshql-mcp" }
meshql-casbin    = { path = "../../meshql-rs/meshql-casbin" }
manifold-edge    = { path = "../manifold-edge" }
manifold-ui      = { path = "../manifold-ui" }
meshql-mongo     = { path = "../../meshql-rs/meshql-mongo", optional = true }
lambda_http      = { version = "0.13", optional = true }
meshql-merkql    = { path = "../../meshql-rs/meshql-merkql", optional = true }
meshql-sqlite    = { path = "../../meshql-rs/meshql-sqlite", optional = true }
sqlx             = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
tokio            = { workspace = true }
serde_json       = { workspace = true }
serde            = { workspace = true }
anyhow           = { workspace = true }
axum             = "0.7"
reqwest          = { version = "0.12", features = ["json"] }

[dev-dependencies]
cucumber     = "0.21"
reqwest      = { version = "0.12", features = ["json"] }
tokio        = { workspace = true }
chrono       = { version = "0.4", features = ["serde"] }
meshql-sqlite = { path = "../../meshql-rs/meshql-sqlite" }
meshql-server = { path = "../../meshql-rs/meshql-server" }
meshql-core   = { path = "../../meshql-rs/meshql-core" }
axum          = "0.7"

[[test]]
name = "groundwork_cert"
path = "tests/groundwork_cert.rs"
harness = false

[[test]]
name = "mcp_harness"
path = "tests/mcp_harness.rs"
harness = false

[features]
default  = ["sqlite"]
mongo    = ["dep:meshql-mongo"]
lambda  = ["dep:lambda_http"]
merkql   = ["dep:meshql-merkql"]
sqlite   = ["dep:meshql-sqlite"]
