[package]
name = "manifold-ingest"
version = "0.1.0"
edition = "2021"
description = "Provenance ledger for Manifold ingestions — records (external_system, external_id, canonical_id) for every primary-domain write made by an adapter or LLM-driven import"

[lib]
name = "manifold_ingest"
path = "src/lib.rs"

[[bin]]
name = "manifold-ingest"
path = "src/main.rs"

[[bin]]
name = "manifold-ingest-mcp"
path = "src/bin/manifold-ingest-mcp.rs"

[dependencies]
meshql-core      = { path = "../../meshql-rs/meshql-core" }
meshql-graphlette = { path = "../../meshql-rs/meshql-graphlette" }
meshql-restlette = { path = "../../meshql-rs/meshql-restlette" }
meshql-server    = { path = "../../meshql-rs/meshql-server" }
meshql-mcp       = { path = "../../meshql-rs/meshql-mcp" }
meshql-casbin    = { path = "../../meshql-rs/meshql-casbin" }
meshql-sqlite    = { path = "../../meshql-rs/meshql-sqlite", optional = true }
meshql-mongo     = { path = "../../meshql-rs/meshql-mongo", optional = true }
manifold-edge    = { path = "../manifold-edge" }
sqlx             = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
tokio            = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
anyhow           = { workspace = true }
axum             = "0.7"
async-trait      = "0.1"

[features]
default = ["sqlite"]
sqlite  = ["dep:meshql-sqlite"]
mongo   = ["dep:meshql-mongo"]
