[package]
name = "union"
version = "0.1.0"
edition = "2021"
description = "People, teams, and work orders for the Manifold suite"

[lib]
name = "union"
path = "src/lib.rs"

[[bin]]
name = "union"
path = "src/main.rs"

[[bin]]
name = "union-mcp"
path = "src/bin/union-mcp.rs"

[dependencies]
meshql-core      = { path = "../../meshql-rs/meshql-core" }
meshql-graphlette = { path = "../../meshql-rs/meshql-graphlette" }
meshql-restlette = { path = "../../meshql-rs/meshql-restlette" }
meshql-server    = { path = "../../meshql-rs/meshql-server" }
meshql-mcp       = { path = "../../meshql-rs/meshql-mcp" }
meshql-mongo     = { path = "../../meshql-rs/meshql-mongo", optional = true }
meshql-merkql    = { path = "../../meshql-rs/meshql-merkql", optional = true }
meshql-sqlite    = { path = "../../meshql-rs/meshql-sqlite", optional = true }
sqlx             = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
tokio            = { workspace = true }
serde_json       = { workspace = true }
serde            = { workspace = true }
anyhow           = { workspace = true }
axum             = "0.7"
reqwest          = { version = "0.12", features = ["json"] }

[dev-dependencies]
cucumber     = "0.21"
reqwest      = { version = "0.12", features = ["json"] }
tokio        = { workspace = true }
chrono       = { version = "0.4", features = ["serde"] }
meshql-sqlite = { path = "../../meshql-rs/meshql-sqlite" }
meshql-server = { path = "../../meshql-rs/meshql-server" }
meshql-core   = { path = "../../meshql-rs/meshql-core" }
axum          = "0.7"

[[test]]
name = "union_cert"
path = "tests/union_cert.rs"
harness = false

[features]
default  = ["sqlite"]
mongo    = ["dep:meshql-mongo"]
merkql   = ["dep:meshql-merkql"]
sqlite   = ["dep:meshql-sqlite"]
